[gd_scene load_steps=17 format=3 uid="uid://8tg7760wepfg"]

[ext_resource type="Script" uid="uid://2j3cjp8ibmf3" path="res://draw_component.gd" id="1_8fp52"]
[ext_resource type="Script" uid="uid://dtjip2jcabaxs" path="res://background_layer_1.gd" id="2_c8fks"]
[ext_resource type="Script" uid="uid://c7wikdblm6tfo" path="res://polygon_layer1.gd" id="2_xkmvj"]
[ext_resource type="Script" uid="uid://uo4eorl6gk7k" path="res://background_layer_2.gd" id="3_gn6yr"]
[ext_resource type="Script" uid="uid://uji82eq7mfhw" path="res://polygon_layer2.gd" id="3_gq44l"]
[ext_resource type="Script" uid="uid://ddqfdu3tote2b" path="res://unit_layer.gd" id="4_3tlhh"]
[ext_resource type="Script" uid="uid://cgfaf8fkly5e" path="res://highlight_manager.gd" id="4_nf8v0"]
[ext_resource type="Script" uid="uid://c37t01qm75jjs" path="res://polygon_layer3.gd" id="4_qy23p"]
[ext_resource type="Script" uid="uid://6gpypbeclio1" path="res://air_layer.gd" id="5_air"]
[ext_resource type="Script" uid="uid://6ing20ar4tuq" path="res://text_overlay_layer.gd" id="5_nf8v0"]
[ext_resource type="Shader" uid="uid://n0dccfii2amw" path="res://draw_component.gdshader" id="6_i01ar"]
[ext_resource type="Script" uid="uid://cb3sc3njqseyn" path="res://unit_trail_manager.gd" id="6_trail"]
[ext_resource type="Script" uid="uid://dt0bn42dsqkon" path="res://vehicles/vehicle_layer.gd" id="7_x1cbm"]
[ext_resource type="Script" uid="uid://uvj0sohy6vtn" path="res://vehicles/vehicle_renderer.gd" id="8_tw2m6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x1cbm"]
shader = ExtResource("6_i01ar")
shader_parameter/density = 0.3
shader_parameter/speed = Vector2(0.02, 0.01)
shader_parameter/noise_scale = 8.547
shader_parameter/octaves = 4
shader_parameter/octave_scale = 0.318
shader_parameter/frequency_multiplier = 3.0
shader_parameter/fog_threshold = 0.75
shader_parameter/fog_softness = 0.5
shader_parameter/cloud_scale = 4.675
shader_parameter/cloud_threshold = 0.75
shader_parameter/fog_color = Color(1, 1, 1, 1)
shader_parameter/color_variation = 0.2
shader_parameter/variation_color = Color(0.8, 0.9, 1, 1)
shader_parameter/edge_darkening = 0.5

[sub_resource type="Environment" id="Environment_qy23p"]
background_mode = 3
tonemap_mode = 4
glow_enabled = true
glow_normalized = true
glow_intensity = 1.0
glow_strength = 1.25
glow_hdr_threshold = 0.25
glow_hdr_scale = 1.0
glow_hdr_luminance_cap = 2.0
adjustment_enabled = true
adjustment_brightness = 1.5

[node name="DrawComponent" type="Node2D"]
script = ExtResource("1_8fp52")

[node name="BackgroundLayer1" type="Node2D" parent="."]
script = ExtResource("2_c8fks")

[node name="RiverSprite" type="Sprite2D" parent="."]

[node name="BackgroundLayer2" type="Node2D" parent="."]
script = ExtResource("3_gn6yr")

[node name="PolygonLayer1" type="Node2D" parent="."]
z_index = 2
script = ExtResource("2_xkmvj")

[node name="HighlightManager" type="Control" parent="."]
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_nf8v0")

[node name="WaterSprite" type="Sprite2D" parent="."]
z_index = 3

[node name="PolygonLayer2" type="Node2D" parent="."]
z_index = 3
script = ExtResource("3_gq44l")

[node name="PolygonLayer3" type="Node2D" parent="."]
z_index = 3
script = ExtResource("4_qy23p")

[node name="UnitLayer" type="Node2D" parent="."]
z_index = 5
script = ExtResource("4_3tlhh")

[node name="UnitTrailManager" type="Node2D" parent="UnitLayer"]
z_index = -1
script = ExtResource("6_trail")

[node name="ArtilleryTrailManager" type="Node2D" parent="."]
z_index = 5
script = ExtResource("6_trail")

[node name="AirLayer" type="Node2D" parent="."]
visible = false
z_index = 7
script = ExtResource("5_air")

[node name="VehicleLayer" type="Node2D" parent="."]
z_index = 8
script = ExtResource("7_x1cbm")

[node name="Vehicles" type="Node2D" parent="VehicleLayer"]
z_index = -2
script = ExtResource("8_tw2m6")

[node name="TextOverlayLayer" type="Node2D" parent="."]
z_index = 9
script = ExtResource("5_nf8v0")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(2560, 1440)

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
material = SubResource("ShaderMaterial_x1cbm")
offset_right = 2240.0
offset_bottom = 1440.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qy23p")
